Fixes color contrast & other accessibility issues

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,8 +22,8 @@ $warm-gray: #dbdbd9;
 $light-warm-gray: #ececea;
 $lightest-warm-gray: #fbfbf9;
 $dark-bluish-gray: #202037;
-$dark-seafoam: #5a9a9a;
-$light-seafoam: #9adada;
+$dark-seafoam: #3a7a7a;
+$light-seafoam: #5a9a9a;
 
 .app-wrapper {
     min-height: calc(100% - 140px);
